@@ -175,11 +175,11 @@ public class Installer extends ModuleInstall implements Runnable {
     /** Flag to store status of last metrics upload */
     private static boolean logMetricsUploadFailed = false;
     
-    private static String USAGE_STATISTICS_ENABLED          = "usageStatisticsEnabled"; // NOI18N
-    private static String USAGE_STATISTICS_SET_BY_IDE       = "usageStatisticsSetByIde"; // NOI18N
-    private static String USAGE_STATISTICS_NB_OF_IDE_STARTS = "usageStatisticsNbOfIdeStarts"; // NOI18N
-    private static String CORE_PREF_NODE = "org/netbeans/core"; // NOI18N
-    private static Preferences corePref = NbPreferences.root().node (CORE_PREF_NODE);
+    private static final  String USAGE_STATISTICS_ENABLED          = "usageStatisticsEnabled"; // NOI18N
+    private static final String USAGE_STATISTICS_SET_BY_IDE       = "usageStatisticsSetByIde"; // NOI18N
+    private static final String USAGE_STATISTICS_NB_OF_IDE_STARTS = "usageStatisticsNbOfIdeStarts"; // NOI18N
+    private static final String CORE_PREF_NODE = "org/netbeans/core"; // NOI18N
+    private static final Preferences corePref = NbPreferences.root().node (CORE_PREF_NODE);
 
     private JButton metricsEnable = new JButton();
     private JButton metricsCancel = new JButton();
@@ -289,13 +289,10 @@ public class Installer extends ModuleInstall implements Runnable {
                 for (LogRecord rec : disabledRec) {
                     LogRecords.write(logStreamMetrics(), rec);
                 }
-                List<LogRecord> clusterRec = new ArrayList<LogRecord>();
-                getClusterList(log, clusterRec);
-                for (LogRecord rec : clusterRec) {
-                    LogRecords.write(logStreamMetrics(), rec);
-                }
+                LogRecord clusterRec = getClusterList(log);
+                LogRecords.write(logStreamMetrics(), clusterRec);
             } catch (IOException ex) {
-                ex.printStackTrace();
+                Exceptions.printStackTrace(ex);
             }
         }
 
@@ -473,7 +470,7 @@ public class Installer extends ModuleInstall implements Runnable {
                     File f1 = logFile(1);
                     if (f.exists() && (f.length() > UIHandler.MAX_LOGS_SIZE)) {
                         LOG.log(Level.INFO, "UIGesture Collector log file size is over limit. It will be deleted."); // NOI18N
-                        LOG.log(Level.INFO, "Log file:" + f + " Size:" + f.length() + " Bytes"); // NOI18N
+                        LOG.log(Level.INFO, "Log file:{0} Size:{1} Bytes", new Object[]{f, f.length()}); // NOI18N
                         closeLogStream();
                         logsSize = 0;
                         if (prefs.getInt("count", 0) < logsSize && preferencesWritable) {
@@ -483,13 +480,14 @@ public class Installer extends ModuleInstall implements Runnable {
                     }
                     if (f1.exists() && (f1.length() > UIHandler.MAX_LOGS_SIZE)) {
                         LOG.log(Level.INFO, "UIGesture Collector backup log file size is over limit. It will be deleted."); // NOI18N
-                        LOG.log(Level.INFO, "Log file:" + f1 + " Size:" + f1.length() + " Bytes"); // NOI18N
+                        LOG.log(Level.INFO, "Log file:{0} Size:{1} Bytes", new Object[]{f1, f1.length()}); // NOI18N
                         f1.delete();
                     }
                 }
             }
         } catch (IOException ex) {
-            ex.printStackTrace();
+            // bug #183331 don't log throwable here since it causes recursive writeOut invocation
+            LOG.log(Level.INFO, "UIGesture Collector logging has failed: {0}", ex.getMessage()); // NOI18N
         }
     }
 
@@ -531,7 +529,7 @@ public class Installer extends ModuleInstall implements Runnable {
                                 //Size is over limit delete file
                                 f1.delete();
                                 if (!f.renameTo(f1)) {
-                                    LOG.log(Level.INFO, "Failed to rename file:" + f + " to:" + f1); // NOI18N
+                                    LOG.log(Level.INFO, "Failed to rename file:{0} to:{1}", new Object[]{f, f1}); // NOI18N
                                 }
                             } else {
                                 //Size is below limit, append data
@@ -540,12 +538,12 @@ public class Installer extends ModuleInstall implements Runnable {
                         } else {
                             f1.delete();
                             if (!f.renameTo(f1)) {
-                                LOG.log(Level.INFO, "Failed to rename file:" + f + " to:" + f1); // NOI18N
+                                LOG.log(Level.INFO, "Failed to rename file:{0} to:{1}", new Object[]{f, f1}); // NOI18N
                             }
                         }
                     } else {
                         if (!f.renameTo(f1)) {
-                            LOG.log(Level.INFO, "Failed to rename file:" + f + " to:" + f1); // NOI18N
+                            LOG.log(Level.INFO, "Failed to rename file:{0} to:{1}", new Object[]{f, f1}); // NOI18N
                         }
                     }
                     logsSizeMetrics = 0;
@@ -563,7 +561,7 @@ public class Installer extends ModuleInstall implements Runnable {
                 RP.post(new Auto()).waitFinished();
             }
         } catch (IOException ex) {
-            ex.printStackTrace();
+            Exceptions.printStackTrace(ex);
         }
     }
 
@@ -641,18 +639,20 @@ public class Installer extends ModuleInstall implements Runnable {
         }
     }
 
-    static void getClusterList (Logger logger, List<LogRecord> clusterRec) {
+    static LogRecord getClusterList (Logger logger) {
         LogRecord rec = new LogRecord(Level.INFO, "USG_INSTALLED_CLUSTERS");
         String dirs = System.getProperty("netbeans.dirs");
-        String [] k = dirs.split(File.pathSeparator);
-        String [] l = new String[k.length];
-        for (int i = 0; i < k.length; i++) {
-            File f = new File(k[i]);
-            l[i] = f.getName();
+        String [] dirsArray = dirs.split(File.pathSeparator);
+        List list = new ArrayList<String>();
+        for (int i = 0; i < dirsArray.length; i++) {
+            File f = new File(dirsArray[i]);
+            if (f.exists()){
+                list.add(f.getName());
+            }
         }
-        rec.setParameters(l);
+        rec.setParameters(list.toArray());
         rec.setLoggerName(logger.getName());
-        clusterRec.add(rec);
+        return rec;
     }
     
     public static URL hintsURL() {
@@ -770,7 +770,11 @@ public class Installer extends ModuleInstall implements Runnable {
         }
     }
 
-    private static File logsDirectory(){
+    static File getDeadlockDumpFile(){
+        return new File(logsDirectory(), "deadlock.dump");
+    }
+
+    static File logsDirectory(){
         String ud = System.getProperty("netbeans.user"); // NOI18N
         if (ud == null || "memory".equals(ud)) { // NOI18N
             return null;
@@ -1300,7 +1304,7 @@ public class Installer extends ModuleInstall implements Runnable {
         if (heapDumpFile.exists() && heapDumpFile.canRead() && heapDumpFile.length() > 0) {
             return heapDumpFile;
         }
-        LOG.info("heap dump was not created at " + heapDumpPath);
+        LOG.log(Level.INFO, "heap dump was not created at {0}", heapDumpPath);
         return null;
     }
     
@@ -1376,7 +1380,7 @@ public class Installer extends ModuleInstall implements Runnable {
                         } while ("UTF-8".equals(replace.group(1)));
                         text = text.substring(0, replace.start(1)) + "UTF-8" + text.substring(replace.end(1));
                     }
-                    LOG.fine("Downloaded with encoding '" + enc + "':\n" + text);
+                    LOG.log(Level.FINE, "Downloaded with encoding ''{0}'':\n{1}", new Object[]{enc, text});
                 } else {
                     LOG.log(Level.FINE, "Downloaded with utf-8:\n{0}", text);
                 }
@@ -1386,6 +1390,11 @@ public class Installer extends ModuleInstall implements Runnable {
     }
 
     private static abstract class Submit implements ActionListener, Runnable {
+
+        private enum DialogState {
+
+            NON_CREATED, CREATED, FAILED
+        };
         private AtomicBoolean isSubmiting;// #114505 , report is sent two times
         protected String exitMsg;
         protected DialogDescriptor dd;
@@ -1394,12 +1403,13 @@ public class Installer extends ModuleInstall implements Runnable {
         protected boolean okToExit;
         protected ReportPanel reportPanel;
         private URL url;
-        private boolean dialogCreated = false;
+        private DialogState dialogState = DialogState.NON_CREATED;
         private boolean checkingResult, refresh = false;
         protected boolean errorPage = false;
         protected DataType dataType = DataType.DATA_UIGESTURE;
         final protected List<LogRecord> recs;
         protected boolean isOOM = false;
+        protected ExceptionsSettings settings;
         
         public Submit(String msg) {
             this(msg,DataType.DATA_UIGESTURE);
@@ -1456,7 +1466,7 @@ public class Installer extends ModuleInstall implements Runnable {
 
             synchronized (this) {
                 RP_UI.post(this);
-                while (!dialogCreated) {
+                while (dialogState.equals(DialogState.NON_CREATED)) {
                     try {
                         wait();
                     } catch (InterruptedException ex) {
@@ -1464,6 +1474,9 @@ public class Installer extends ModuleInstall implements Runnable {
                     }
                 }
                 notifyAll();
+            }
+            if (dialogState.equals(DialogState.FAILED)){
+                return;
             }
 
             LOG.log(Level.FINE, "doShow, dialog has been created"); // NOI18N
@@ -1496,7 +1509,7 @@ public class Installer extends ModuleInstall implements Runnable {
                     //End
                     is = new FileInputStream(tmp);
                     parseButtons(is, exitMsg, dd);
-                    LOG.log(Level.FINE, "doShow, parsing buttons: " + Arrays.toString(dd.getOptions())); // NOI18N
+                    LOG.log(Level.FINE, "doShow, parsing buttons: {0}", Arrays.toString(dd.getOptions())); // NOI18N
                     alterMessage(dd);
                     is.close();
                     url = tmp.toURI().toURL();
@@ -1538,7 +1551,7 @@ public class Installer extends ModuleInstall implements Runnable {
                 assignInternalURL(url);
                 refresh = false;
                 synchronized (this) {
-                    while (dialogCreated && !refresh) {
+                    while (dialogState.equals(DialogState.CREATED) && !refresh) {
                         try {
                             wait();
                         } catch (InterruptedException ex) {
@@ -1556,7 +1569,7 @@ public class Installer extends ModuleInstall implements Runnable {
         }
 
         protected synchronized final void doCloseDialog() {
-            dialogCreated = false;
+            dialogState = DialogState.NON_CREATED;
             closeDialog();
             notifyAll();
             LOG.log(Level.FINE, "doCloseDialog");
@@ -1579,21 +1592,27 @@ public class Installer extends ModuleInstall implements Runnable {
         }
 
         public void run() {
-            createDialog();
-            synchronized (this) {
-                dialogCreated = true;
-                // dialog created let the code go on
-                notifyAll();
+            DialogState newState = DialogState.CREATED;
+            try{
+                createDialog();
+            }catch (RuntimeException e){
+                newState = DialogState.FAILED;
+                throw e;
+            } finally {
+                synchronized (this) {
+                    dialogState = newState;
+                    // dialog created let the code go on
+                    notifyAll();
 
 
-                try {
-                    // wait till the other code runs
-                    wait();
-                } catch (InterruptedException ex) {
-                    Exceptions.printStackTrace(ex);
+                    try {
+                        // wait till the other code runs
+                        wait();
+                    } catch (InterruptedException ex) {
+                        Exceptions.printStackTrace(ex);
+                    }
                 }
             }
-
             LOG.log(Level.FINE, "run, showDialogAndGetValue");
             Object res = showDialogAndGetValue(dd);
             LOG.log(Level.FINE, "run, showDialogAndGetValue, res = {0}", res);
@@ -1738,7 +1757,7 @@ public class Installer extends ModuleInstall implements Runnable {
             checkingResult = true;
             try {
                 String login = URLEncoder.encode(panel.getUserName(), "UTF-8");
-                String encryptedPasswd = URLEncoder.encode(PasswdEncryption.encrypt(panel.getPasswd()), "UTF-8");
+                String encryptedPasswd = URLEncoder.encode(PasswdEncryption.encrypt(new String(panel.getPasswdChars())), "UTF-8");
                 char[] array = new char[100];
                 URL checkingServerURL = new URL(NbBundle.getMessage(Installer.class, "CHECKING_SERVER_URL", login, encryptedPasswd));
                 URLConnection connection = checkingServerURL.openConnection();
@@ -1746,7 +1765,7 @@ public class Installer extends ModuleInstall implements Runnable {
                 connection.setReadTimeout(20000);
                 Reader reader = new InputStreamReader(connection.getInputStream());
                 int length = reader.read(array);
-                checkingResult = new Boolean(new String(array, 0, length));
+                checkingResult = Boolean.valueOf(new String(array, 0, length));
             } catch (UnsupportedEncodingException ex) {
                 Exceptions.printStackTrace(ex);
             } catch (Exception exception) {
@@ -1806,8 +1825,8 @@ public class Installer extends ModuleInstall implements Runnable {
                 }else{
                     params.add(panel.getUserName());
                 }
-            } else {
-                params.add(new ExceptionsSettings().getUserName());
+            } else if (settings != null) {
+                params.add(settings.getUserName());
             }
             addMoreLogs(params, openPasswd);
             userData = new LogRecord(Level.CONFIG, USER_CONFIGURATION);
@@ -1910,12 +1929,13 @@ public class Installer extends ModuleInstall implements Runnable {
                 }
             }
             final String summary = message;
+            settings = new ExceptionsSettings();
             try {
                 EventQueue.invokeAndWait(new Runnable() {
 
                     public void run() {
                         if (reportPanel==null) {
-                            reportPanel = new ReportPanel(isOOM);
+                            reportPanel = new ReportPanel(isOOM, settings);
                         }
                         if (summary != null){
                             reportPanel.setSummary(summary);
@@ -1964,6 +1984,9 @@ public class Installer extends ModuleInstall implements Runnable {
             } catch (InvocationTargetException ex) {
                 Exceptions.printStackTrace(ex);
             }
+            if (d == null){
+                throw new IllegalStateException("Dialog was not created correctly");
+            }
         }
 
         public void hyperlinkUpdate(HyperlinkEvent e) {
@@ -1977,6 +2000,13 @@ public class Installer extends ModuleInstall implements Runnable {
                 return;
             }
             reportPanel.saveUserData();
+            RP_UI.post(new Runnable() {
+
+                @Override
+                public void run() {
+                    settings.save();
+                }
+            });
             dd.setValue(DialogDescriptor.CLOSED_OPTION);
             d.setVisible(false);
             d.dispose(); // fix the issue #137714
@@ -2118,7 +2148,7 @@ public class Installer extends ModuleInstall implements Runnable {
         }
 
         protected void showURL(URL u, boolean inIDE) {
-            LOG.log(Level.FINE, "opening URL: " + u); // NOI18N
+            LOG.log(Level.FINE, "opening URL: {0}", u); // NOI18N
             if (inIDE){
                 ReporterResultTopComponent.showUploadDone(u);
             }else{
@@ -2131,10 +2161,11 @@ public class Installer extends ModuleInstall implements Runnable {
                 params.add(reportPanel.getSummary());
                 params.add(reportPanel.getComment());
                 try {
-                    String passwd = reportPanel.getPasswd();
-                    if ((openPasswd) && (passwd.length() != 0) && (!reportPanel.asAGuest())){
-                        passwd = PasswdEncryption.encrypt(passwd);
-                        params.add(passwd);
+                    char[] passwd = reportPanel.getPasswdChars();
+                    if ((openPasswd) && (passwd.length != 0) && (!reportPanel.asAGuest())){
+                        String pwd = new String(passwd);
+                        pwd = PasswdEncryption.encrypt(pwd);
+                        params.add(pwd);
                     } else {
                         params.add("*********");// NOI18N
                     }
